// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rest - Upstreams No upstreams 1`] = `
Object {
  "data": Object {
    "createFoo": Object {
      "id": "1",
      "name": "BAR",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Rest - Upstreams Upstream with host and targetOrigin 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: request to http://virtual-host/api/mock failed, reason: getaddrinfo ENOTFOUND virtual-host],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Rest - Upstreams Upstream with host without targetOrigin 1`] = `
Object {
  "data": Object {
    "createFoo": Object {
      "id": "1",
      "name": "BAR",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
